tests/vertical-slice/reject/yield_outside_gen.hew
// Reject fixture: bare `yield` at function scope (not inside gen{}).
// Expected: YieldOutsideGenerator diagnostic.
fn main() {
    yield 1;
}
